[CSS] improved login navbar on mobile + small fixes(+3 squashed commit)
Squashed commit:

[f0ffd89] Next

[0e82276] next

[f6239df] next

--- a/assets/css/all_restaurants.scss
+++ b/assets/css/all_restaurants.scss
@@ -8,10 +8,10 @@
 
 .thumbnail.restaurant-thumbnail {
   border-bottom: none;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   display: flex;
   flex-direction: column;
-  padding: 0px;
+  padding: 0;
   height: 100%;
 }
 
@@ -33,7 +33,7 @@ div.restaurant-thumbnail > img.restaurant-image {
 }
 
 .thumbnail .restaurant-caption.caption {
-  padding-top: 0px;
+  padding-top: 0;
 }
 
 .btn.btn-more-info {
@@ -44,4 +44,8 @@ div.restaurant-thumbnail > img.restaurant-image {
 .restaurants-flex-container {
   display: flex;
   flex-wrap: wrap;
+}
+
+.pagination-row {
+  margin-bottom: 49.2px;
 }
