--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -5,8 +5,24 @@ body {
   padding-bottom: 49.2px;
   font-family: "Muli", sans-serif;
   line-height: 1.5;
-  padding-top: 54px;
   min-height: 100vh;
+}
+
+#global-container {
+  margin-top: 54px;
+  padding-bottom: 49.2px;
+}
+
+@media (max-width: 768px) {
+
+  #global-container {
+    margin-top: 0;
+  }
+
+  #navbar-menu {
+    position: static;
+  }
+
 }
 
 .no-js #loader {
@@ -23,8 +39,8 @@ body {
 .se-pre-con {
   position: fixed;
   margin-top: 51px;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   z-index: 9999;
